08/ingress2/pay.yml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      name: pay-pod
      labels:
        app: pay
    spec:
      containers:
        - name: pod-container
          image: whatwant/node-web:2.0
          ports:
          - containerPort: 8080

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: pay-service
spec:
  type: ClusterIP
  # clusterIP: 10.100.10.10
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: pay
